namespace EventManagementSystem
{
    /// <summary>
    /// Interface that defines core CRUD operations for management forms.
    /// Demonstrates the Interface concept of OOP.
    /// </summary>
    public interface IManage
    {
        void Add();
        void Delete();
        void Display();
    }
}
